# fipe-cars-manufacturers

./: LICENSE  README.md  manage.py  requirements.txt  setup.cfg
fipe_api/: LICENSE  README.rst  admin.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
fipe_api/fixtures/: data_fipe.json  fipe_api.json
fipe_api/management/commands/: get_data.py  marcas.json  scrap_data_selenium.py
fipe_api/migrations/: 0001_initial.py  0002_auto_20200104_1715.py  0003_auto_20200104_2217.py  0004_auto_20200104_2217.py  0005_auto_20200105_0010.py  0006_auto_20200105_0013.py
