[metadata]
name = fipe_api
version = 0.1
description = A Django Rest Framework API to get a Cars and Manufacturers, based in FIPE.
long_description = file: README.rst
# url = https://www.example.com/
author = WanderWashington
# author_email = wander.wsantos@gmail.com
license = MIT License  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.9  
    Framework :: Django-Rest-Framework :: 3.9.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
include_package_data = true
packages = find: